[project]
name = "wod_challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10" # py32 doesn't work due to constraint in waymo_open_dataset package
dependencies = [
    # Don't change these deps as they're used by waymo_open_dataset.
    "absl-py==1.4.0",
    "dask[dataframe]==2023.3.1",
    "einsum==0.3.0",
    "google-auth==2.16.2",
    "immutabledict==2.2.0",
    "jax==0.4.17",
    "jaxlib==0.4.17",
    "matplotlib==3.10.8",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "pillow==9.2.0",
    "plotly==5.13.1",
    "pyarrow==16.0.0",
    "scikit-image==0.20.0",
    "scikit-learn==1.2.2",
    "setuptools==67.6.0",
    "tensorflow==2.13",
    "tensorflow_probability==0.21.0",
    "visu3d==1.5.1",
    "dacite==1.8.1",
    # Add your custom packages here
    "torch>=2.1.2",
    "altair>=5.3.0",
    "opencv-python>=4.8.1.78",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "jupyter>=1.1.1",
    # ipython<8.13, to prevent dep on typing_extensions.TypeAliasType, which isn't available till typing-extensions-4.6.0, tensorflow=2.13 requires <4.6.0
    "ipython<8.13",
    "isort>=7.0.0",
]
